<resources>
    <string name="app_name">MVVMsample1</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User name</string>
    <string name="user_nick">Nickname</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="street">Street</string>
    <string name="suite">Suite</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="geo">Geo</string>
    <string name="phone">Phone</string>
    <string name="website">Web Site</string>
    <string name="company">Company</string>
    <string name="posts">Posts</string>
    <string name="album">Album</string>
    <string name="retry">Retry</string>
</resources>
